app/k8s/db.yml
---
apiVersion: v1
kind: Service
metadata:
  name: demo-db
  namespace: secure-devops
spec:
  ports:
    - port: 5432
  selector:
    app: demo-db

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-db
  namespace: secure-devops
  labels:
    app: demo-db
spec:
  selector:
    matchLabels:
      app: demo-db
  template:
    metadata:
      labels:
        app: demo-db
    spec:
      automountServiceAccountToken: false
      securityContext:
        runAsUser: 999
        runAsNonRoot: true
        fsGroup: 999
        seccompProfile:
          type: RuntimeDefault
      containers:
        - image: postgres:18.3
          name: postgresql
          imagePullPolicy: Always
          securityContext:
            runAsUser: 999
            runAsNonRoot: true
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: false
            capabilities:
              drop:
                - ALL
          ports:
            - containerPort: 5432
              name: postgresql
          livenessProbe:
            tcpSocket:
              port: postgresql
            initialDelaySeconds: 30
            periodSeconds: 10
          readinessProbe:
            tcpSocket:
              port: postgresql
            initialDelaySeconds: 10
            periodSeconds: 5
          startupProbe:
            tcpSocket:
              port: postgresql
            initialDelaySeconds: 0
            periodSeconds: 10
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "500m"
